--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Speech Recognition with Python</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{{url_for('static', filename='styles/index.css')}}" />
+        <link rel="stylesheet" href="index.css" />
     </head>
 
     <body>
